# -omputational_mathematics

./: CMakeLists.txt
common/: Quanc8.cpp  Rkf45.cpp
coursework/: main.cpp  zeroin.h  отчет.docx
first_lab/: Langrage.cpp  Langrage.h  Quanc8.cpp  Quanc8.h  Spline.cpp  Spline.h  main.cpp  отчет.docx
second_lab/: Decomp.cpp  Decomp.h  Solve.cpp  Solve.h  decomp.c  main.cpp  отчет.docx
third_lab/: CMakeLists.txt  Rkf45.cpp  Rkf45.h  main.cpp  rkf.cpp  rkf.h  отчет.docx
